--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -14287,6 +14287,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Odaberi 
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Odaberi djelokrug akcije koju ova uloga može izvesti na <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Odaberi djelokrug radnji unutar kojeg ih ova uloga može izvoditi u <em>{0}</em> portletu.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Odaberi djelokrug akcije koju ova uloga može izvesti na <em>{0}</em> resursu.
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Odaberite mjestima gdje tu ulogu mogu obavljati <em>{0}</em> djelovanje na {1} portlet.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Odaberite mjestima gdje tu ulogu mogu obavljati <em>{0}</em> djelovanje na {1} resurs.
