--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -14289,6 +14289,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Selecion
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Selecionar o âmbito da ação que este role pode efetuar em <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Selecionar o âmbito da ação que este role pode efetuar na portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Selecionar o âmbito da ação que este role pode efetuar no recurso <em>{0}</em>.
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Selecionar os sites onde este role pode efetuar a ação <em>{0}</em> na portlet {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Selecionar os sites onde este role pode efetuar a ação <em>{0}</em> no recurso {1}.
