--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -14289,6 +14289,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Seleccio
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Seleccioneu l'abast de l'acció que aquest rol pot realitzar sobre <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Seleccioneu l'abast de l'acció que aquest rol pot realitzar sobre el mòdul de portal <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Seleccioneu l'abast de l'acció que aquest rol pot realitzar sobre el recurs <em>{0}</em>.
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
 select-the-searchable-types-description=Seleccioneu els tipus cercables. Si no se selecciona cap tipus, se cercaran tots els tipus cercables (contingut i objectes).
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Seleccioneu els llocs web en què aquest rol pot realitzar l'acció de <em>{0}</em> en el mòdul de portal {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Seleccioneu els llocs web en què aquest rol pot realitzar l'acció de <em>{0}</em> en el recurs {1}.
