--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -14287,6 +14287,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Zvolte r
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Zvolte rámec akce, kterou smí uživatel s touto rolí provést nad <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Zvolte rámec akce, kterou smí uživatel s touto rolí provést nad tímto portletem <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Zvolte rámec akce, kterou smí uživatel s touto rolí provést nad entitou <em>{0}</em>.
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Vyberte weby, kde bude mít tato role oprávnění provádět akci <em>{0}</em> na portletu {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Vyberte weby, kde bude mít tato role oprávnění provádět akci <em>{0}</em> na zdroji {1}.
