--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -14287,6 +14287,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Vali teg
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Vali tegevuse skoop, mida antud roll saab täita <em>{0}</em> puhul.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Vali tegevuse skoop, mida antud roll saab täita <em>{0}</em> portleti puhul.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Select the scope of the action that this role can perform on the <em>{0}</em> resource. (Automatic Copy)
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Select the sites where this role can perform the <em>{0}</em> action on the {1} portlet. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Select the sites where this role can perform the <em>{0}</em> action on the {1} resource. (Automatic Copy)
