--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -14287,6 +14287,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=انتخ
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=محدوده‌ی فعالیتی که این نقش می‌تواند روی <em>{0}</em> انجام دهد را انتخاب نمایید.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=محدوده‌ی فعالیتی که این نقش می‌تواند روی هر پورتلت <em>{0}</em> انجام دهد را انتخاب نمایید.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=محدوده‌ی فعالیتی که این نقش می‌تواند روی هر منبع <em>{0}</em> انجام دهد را انتخاب نمایید.
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=سایت‌هایی را انتخاب کنید که این نقش بتواند <em>{0}</em> نمایش دهد در پرتلت {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=سایتی را که این نقش می‌تواند فعالیت <em>{0}</em> را روی منبع {1} انجام دهد را انتخاب نمایید.
