--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -14287,6 +14287,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Pilih ru
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Pilih ruang lingkup tindakan bahwa peran ini dapat dilakukan pada <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Pilih ruang lingkup tindakan bahwa peran ini dapat dilakukan pada <em>{0}</em> portlet.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Pilih ruang lingkup tindakan bahwa peran ini dapat dilakukan pada <em>{0}</em> resource.
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Pilih situs di mana peran ini dapat melakukan <em>{0}</em> tindakan pada {1} portlet.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Pilih situs di mana peran ini dapat melakukan <em>{0}</em> tindakan pada {1} sumber daya.
