--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -14290,6 +14290,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Het bere
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Het bereik selecteren van de actie die deze rol mag uitvoeren op de <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Het bereik selecteren van de actie die deze rol mag uitvoeren op de <em>{0}</em> portlet.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Het bereik selecteren van de actie die deze rol mag uitvoeren op de <em>{0}</em> resource.
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
 select-the-searchable-types-description=Selecteer de doorzoekbare types. Als geen types geselecteerd zijn, worden alle doorzoekbare types (assets en objecten) doorzocht.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Sites selecteren waar deze rol de <em>{0}</em> actie op de {1} portlet kan uitvoeren.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Sites selecteren waar deze rol de <em>{0}</em> actie op de {1} resource kan uitvoeren.
