--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -14287,6 +14287,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Selectea
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Selecteaza intinderea actiunii pe care acest rol o poate efectua pe ele <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Selecteaza intinderea actiunii pe care acest rol o poate efectua pe modul <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Selecteaza intinderea actiunii pe care acest rol o poate efectua pe resursa <em>{0}</em>.
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Select the sites where this role can perform the <em>{0}</em> action on the {1} portlet. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Select the sites where this role can perform the <em>{0}</em> action on the {1} resource. (Automatic Copy)
