--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -14287,6 +14287,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Выбе
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Выберите набор действий, который может выполнять эта роль над <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Выберите набор действий, который может выполнять эта роль над приложением <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Выберите набор действий, который может выполнять эта роль над ресурсом <em>{0}</em>.
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Выберите сайты, где эта роль сможет выполнять действие <em>{0}</em> в приложении {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Выберите сайты, где эта роль сможет выполнять действие <em>{0}</em> над ресурсом {1}.
