--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -14287,6 +14287,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Vyberte 
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Vyberte oblasť pre akciu, ktorú táto rola môže vykonať na <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Vyberte oblasť pre akciu, ktorú táto rola môže vykonať na portlete <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Vyberte rozsah pre akciu, ktorú táto rola môže vykonať na prostriedku <em>{0}</em>.
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Vyberte sídla, kde táto rola môže vykonávať akciu <em>{0}</em> na portlete {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Vyberte sídla, kde táto rola môže vykonávať akciu <em>{0}</em> na zdroji {1}.
