--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -14287,6 +14287,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Chọn p
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Chọn phạm vi của hành động có thể thực hiện theo vai trò của bạn trên <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Chọn phạm vi của hành động có thể thực hiện theo vai trò của bạn trên <em>{0}</em> ứng dụng.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Chọn phạm vi của hành động có thể thực hiện theo vai trò của bạn trên <em>{0}</em> tài nguyên.
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Chọn các trang thông tin ở đó theo vai trò có thể thực hiện tác động <em>{0}</em> tại {1} ứng dụng (portlet).
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Chọn các trang thông tin ở đó theo vai trò có thể thực hiện tác động <em>{0}</em> tại {1} tài nguyên (resource).
